--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Foro-Hub_Challenge
+spring.datasource.url=jdbc:postgresql://localhost/foro_api
+spring.datasource.username=postgres
+spring.datasource.password=atreus9512
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.flyway.locations=classpath:db/migration
+
+#server.error.include-stacktrace=never
+#
+#api.security.token.secret=${JWT_SECRET:12345678}
