se agrega configuraciones de seguridad y readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Foro-Hub_Challenge
 spring.datasource.url=jdbc:postgresql://localhost/foro_api
-spring.datasource.username=postgres
-spring.datasource.password=atreus9512
+spring.datasource.username=tu_usuario
+spring.datasource.password=tu_contraseña
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -13,4 +13,4 @@ spring.flyway.locations=classpath:db/migration
 
 #server.error.include-stacktrace=never
 #
-#api.security.token.secret=${JWT_SECRET:12345678}
+api.security.token.secret=12345678
